initializing the new library project